--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div>ilgili icerkler bu kısma yazılacak</div>
-<p>burası paragraf</p>
+ 
+    <h1> burası h1 tagı</h1>   
+    <h2> burası h2 tagı</h2>
+    <h3 style="color: blueviolet"       > burası h3 tagı</h3>
+    <a href="https://github.com/"> buraya tıklarsan github a gidersin</a>
+    <img src="https://free4kwallpapers.com/uploads/originals/2015/12/10/ridge-racer-unbounded-2012-wallpaper.jpg"width="180" height="142" alt="pc wallpaper"/>"
+    <<p title="icerık kısmı" style="text-align: center"      > bu bir paragraftır</p>
+    <<p style="font-size: 40px ;font-style: inherit;color: #8d4be5;background-color:peru"       > İnönü Üniversitesi Yazılım Mühendisligi</p>
+     
+    <<p>  <abbr title="Dünya Sağlık Örgütü"DSÖ>1948'de kurulmuştur. </abbr>      </p>
 </body>
 </html>
+    
